--- a/teamworkWDC.html
+++ b/teamworkWDC.html
@@ -16,10 +16,25 @@
     <div class="container container-table">
         <div class="row vertical-center-row">
             <div class="text-center col-md-4 col-md-offset-4">
+                <h2>Web Data Connector for Tableau: Teamwork Data</h2>
+                <form>
+                    <div class="form-inline">
+                        <br/>
+                        <br/>
+                        <h5>Teamwork username</h5>
+                        <input type="text" class="form-control" id="teamwork-username-input" size="40" value="">
+                        <br/>
+                        <br/>
+                        <h5>Teamwork password</h5>
+                        <input type="password" class="form-control" id="teamwork-password-input" size="20" value="">
+                    </div>
+                </form>
                 <button type="button" id="submitButton" class="btn btn-success" style="margin: 10px;">Get Your Teamwork Data Immediately!</button>
+                <div id="errorMsg"></div>
             </div>
         </div>
     </div>
 </body>
+
 
 </html>
